feat: Implement AI agents for all PixelCraft services
- Add 6 new service-specific AI agents: Web Development, Digital Marketing, Brand Design, E-commerce Solutions, Content Creation, and Analytics Consulting
- Update orchestrator to register and route to all service agents
- Fix UI issues: enhance badge visibility, improve AI preview with service agent badges, link CTA buttons to strategy session
- Add comprehensive agent tooling and specialized knowledge for each service area
- Implement intelligent routing based on user queries and keywords

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "vite build",
     "test": "vitest",
     "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:coverage:ui": "vitest --ui --coverage",
+    "test:watch": "vitest --watch",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -63,13 +66,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.3",
-      "typescript-eslint": "^8.0.1",
-      "vitest": "^1.0.0",
-      "@testing-library/react": "^14.0.0",
-      "@testing-library/jest-dom": "^6.0.0",
-      "@testing-library/user-event": "^14.0.0",
-      "jsdom": "^22.0.0"
+    "vaul": "^0.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -88,6 +85,13 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.0.0",
+    "vitest": "^1.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/user-event": "^14.0.0",
+    "jsdom": "^22.0.0"
   }
 }
