update backend files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,7 @@ OLLAMA_STREAM=true
 # Use the Supabase service role key for backend operations (NEVER expose to frontend).
 SUPABASE_URL=https://ozqpzwwpgyzlxhtekywj.supabase.co
 SUPABASE_KEY=your-service-role-key-here
+# Get this from Supabase Dashboard > Settings > API > JWT Secret
 SUPABASE_JWT_SECRET=your-jwt-secret-here
 
 ## Optional Services
@@ -27,4 +28,5 @@ REDIS_URL=redis://localhost:6379/0
 # Additional notes:
 # - OLLAMA_HOST: If running Ollama locally, the default port is 11434.
 # - SUPABASE_KEY: Prefer using a dedicated service role key scoped to the backend.
+# - SUPABASE_JWT_SECRET: Required for API authentication to work properly.
 # - CORS_ORIGINS: Add production frontend domain(s) when deploying.
