`feat: add revenue analytics system with API endpoints, test data generation, and real-time updates via WebSocket`

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,6 +24,7 @@ SUPABASE_JWT_SECRET=your-jwt-secret-here
 
 ## Optional Services
 REDIS_URL=redis://localhost:6379/0
+# REDIS_URL: Required for real-time analytics updates via WebSocket. If not set, WebSocket will work but without pub/sub broadcasting.
 
 # Additional notes:
 # - OLLAMA_HOST: If running Ollama locally, the default port is 11434.
