`Added external API integrations for CRM, email, and calendar services`

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,6 +26,33 @@ SUPABASE_JWT_SECRET=your-jwt-secret-here
 REDIS_URL=redis://localhost:6379/0
 # REDIS_URL: Required for real-time analytics updates via WebSocket. If not set, WebSocket will work but without pub/sub broadcasting.
 
+## External API Integrations (Optional)
+# External API integrations are optional. If not configured, agents will skip external tool calls gracefully.
+# To enable CRM integration: Create a HubSpot Private App (Settings > Integrations > Private Apps) and copy the access token.
+# To enable email: Create a SendGrid API key (Settings > API Keys) with Mail Send permissions.
+# To enable calendar: Create a Google Cloud project, enable Calendar API, and generate an API key or OAuth credentials.
+
+CRM_PROVIDER=hubspot
+# CRM provider: hubspot | salesforce
+CRM_API_KEY=your-crm-api-key-here
+# HubSpot Private App token or Salesforce API key
+CRM_API_URL=https://api.hubapi.com
+# CRM API base URL (default for HubSpot)
+
+EMAIL_PROVIDER=sendgrid
+# Email provider: sendgrid | mailgun
+EMAIL_API_KEY=your-sendgrid-api-key-here
+# SendGrid API key from dashboard
+EMAIL_FROM=noreply@pixelcraft.com
+# Default sender email address
+
+CALENDAR_PROVIDER=google
+# Calendar provider: google | outlook
+CALENDAR_API_KEY=your-google-calendar-api-key-here
+# Google Calendar API key or OAuth token
+CALENDAR_ID=primary
+# Calendar ID to use (default: primary)
+
 # Additional notes:
 # - OLLAMA_HOST: If running Ollama locally, the default port is 11434.
 # - SUPABASE_KEY: Prefer using a dedicated service role key scoped to the backend.
