`Added notification system with real-time delivery via WebSocket and REST API`

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -58,3 +58,7 @@ CALENDAR_ID=primary
 # - SUPABASE_KEY: Prefer using a dedicated service role key scoped to the backend.
 # - SUPABASE_JWT_SECRET: Required for API authentication to work properly.
 # - CORS_ORIGINS: Add production frontend domain(s) when deploying.
+
+# Notifications are automatically enabled when Redis is configured
+# Real-time notifications use WebSocket at /api/ws/notifications
+# Notification events are published to Redis channels: notifications:user:{user_id}
