--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,9 @@ python-multipart>=0.0.9
 httpx>=0.27.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
+
+# Testing dependencies
+pytest>=8.0.0
+pytest-asyncio>=0.23.0
+pytest-mock>=3.12.0
+pytest-cov>=4.1.0
