`Updated documentation and code for PixelCraft AI Backend, including API endpoints, WebSocket channels, authentication, environment variables, and database schema mapping.`

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,6 +22,11 @@ SUPABASE_KEY=your-service-role-key-here
 # Get this from Supabase Dashboard > Settings > API > JWT Secret
 SUPABASE_JWT_SECRET=your-jwt-secret-here
 
+## API Configuration (for docs/examples)
+# Base URL and JWT secret used by clients/tests. Do not commit real secrets.
+API_URL=http://localhost:8000
+API_JWT_SECRET=replace-with-dev-secret
+
 ## Optional Services
 REDIS_URL=redis://localhost:6379/0
 # REDIS_URL: Required for real-time analytics updates via WebSocket. If not set, WebSocket will work but without pub/sub broadcasting.
