--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,29 @@
 {
-  "rewrites": [
+  "headers": [
     {
       "source": "/(.*)",
+      "headers": [
+        { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains; preload" },
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
+        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+        { "key": "Permissions-Policy", "value": "geolocation=(), microphone=(), camera=()" },
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; font-src 'self' data: https:; connect-src 'self' https: ws:; frame-ancestors 'self';"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.{js,css,svg,png,jpg,jpeg,webp,gif,ico}",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/((?!.*\\.(?:css|js|png|jpg|jpeg|svg|ico|json|txt|map|webmanifest|webp|gif|pdf|csv|xlsx|xml|html)).*)",
       "destination": "/index.html"
     }
   ]
