`feat: add Stripe payments integration`
This commit includes the following changes:

- Added Stripe API key and webhook secret to `.env.example` and `ops/.env.prod.example`
- Updated `backend/.env.example` and `ops/.env.prod

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -58,11 +58,25 @@ CALENDAR_API_KEY=your-google-calendar-api-key-here
 CALENDAR_ID=primary
 # Calendar ID to use (default: primary)
 
+## Stripe Payments (optional until enabled)
+# Required for Stripe API calls (server-side secret key)
+STRIPE_API_KEY=sk_live_or_test_key_here
+# Webhook signing secret from Stripe Dashboard → Developers → Webhooks
+STRIPE_WEBHOOK_SECRET=whsec_...
+# Default price to use when client does not pass one
+STRIPE_PRICE_ID=price_12345
+# Checkout mode: subscription | payment
+STRIPE_MODE=subscription
+# URLs to redirect after checkout (frontend pages)
+STRIPE_SUCCESS_URL=http://localhost:5173/payments/success
+STRIPE_CANCEL_URL=http://localhost:5173/payments/cancel
+
 # Additional notes:
 # - OLLAMA_HOST: If running Ollama locally, the default port is 11434.
 # - SUPABASE_KEY: Prefer using a dedicated service role key scoped to the backend.
 # - SUPABASE_JWT_SECRET: Required for API authentication to work properly.
 # - CORS_ORIGINS: Add production frontend domain(s) when deploying.
+# - Stripe: Use test keys in development. Configure webhooks to POST to /api/payments/webhook.
 
 # Notifications are automatically enabled when Redis is configured
 # Real-time notifications use WebSocket at /api/ws/notifications
