--- a/ops/.env.prod.example
+++ b/ops/.env.prod.example
@@ -62,3 +62,17 @@ VITE_GA_ID=
 # - Do NOT expose SUPABASE_SERVICE_ROLE_KEY in frontend.
 # - Keep JWT secrets, service keys out of the repo; use secrets managers.
 # - Update ALLOWED_ORIGINS to include your deployed domains.
+
+###############################################
+# Payments (Stripe)
+###############################################
+STRIPE_API_KEY=sk_live_xxx_or_test
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+STRIPE_PRICE_ID=price_xxx_default
+STRIPE_MODE=subscription
+STRIPE_SUCCESS_URL=https://yourdomain.com/payments/success
+STRIPE_CANCEL_URL=https://yourdomain.com/payments/cancel
+
+# Notes:
+# - Use test keys for staging; live keys for production only.
+# - Configure Stripe Webhook endpoint to POST to https://api.yourdomain.com/api/payments/webhook
