--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,9 @@ httpx>=0.27.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 
+# Payments
+stripe>=10.0.0
+
 # Testing dependencies
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
