`Refactor ModelManager and related components for improved model selection, caching, and performance tracking`

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,12 @@ OLLAMA_KEEP_ALIVE=10m              # Keep-alive duration for model pooling
 OLLAMA_TEMPERATURE=0.7
 OLLAMA_STREAM=true
 
+MODEL_CACHE_TTL=3600              # Response cache duration in seconds
+MODEL_HEALTH_CHECK_INTERVAL=300    # Health check frequency in seconds
+MODEL_REQUEST_TIMEOUT=30           # Request timeout in seconds
+MODEL_MAX_RETRIES=3                # Maximum retry attempts for failed requests
+MODEL_WARMUP_ON_STARTUP=true       # Enable model warmup on startup
+
 ## Supabase Configuration
 # Use the Supabase service role key for backend operations (NEVER expose to frontend).
 SUPABASE_URL=https://ozqpzwwpgyzlxhtekywj.supabase.co
