--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,9 +2,6 @@ fastapi>=0.115.0
 uvicorn[standard]>=0.30.0
 python-dotenv>=1.0.0
 
-# AgentScope & Ollama (open-source LLM integration)
-agentscope[ollama]>=1.0.0
-
 # Supabase and caching
 supabase>=2.9.0
 redis>=5.0.0
@@ -16,6 +13,9 @@ python-multipart>=0.0.9
 httpx>=0.27.0
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
+aiohttp>=3.9.0
+tenacity>=8.0.0
+cachetools>=5.0.0
 
 # Payments
 stripe>=10.0.0
