--- a/backend/.env.example
+++ b/backend/.env.example
@@ -77,6 +77,16 @@ STRIPE_MODE=subscription
 STRIPE_SUCCESS_URL=http://localhost:5173/payments/success
 STRIPE_CANCEL_URL=http://localhost:5173/payments/cancel
 
+## Sentry Error Monitoring (Optional)
+SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id  # Get this from Sentry.io project settings
+SENTRY_ENVIRONMENT=development                           # Environment name: development | staging | production
+SENTRY_TRACES_SAMPLE_RATE=0.1                            # Performance monitoring sample rate, 0.0 to 1.0, default 0.1 for 10%
+SENTRY_PROFILES_SAMPLE_RATE=0.1                          # Profiling sample rate, 0.0 to 1.0, default 0.1 for 10%
+SENTRY_RELEASE=pixelcraft-backend@1.0.0                  # Release version for tracking, typically from git commit or version tag
+SENTRY_ENABLE_TRACING=true                               # Enable performance tracing
+# Sentry is optional and will only activate if SENTRY_DSN is set.
+# To obtain a Sentry DSN: Log in to Sentry.io, create a new project (or select an existing one), navigate to Project Settings > Client Keys (DSN), and copy the DSN value.
+
 # Additional notes:
 # - OLLAMA_HOST: If running Ollama locally, the default port is 11434.
 # - SUPABASE_KEY: Prefer using a dedicated service role key scoped to the backend.
