--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ passlib[bcrypt]>=1.7.4
 aiohttp>=3.9.0
 tenacity>=8.0.0
 cachetools>=5.0.0
+sentry-sdk[fastapi]>=2.0.0
 
 # Payments
 stripe>=10.0.0
