--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@sentry/react": "^7.100.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.56.2",
     "@types/recharts": "^1.8.29",
@@ -81,6 +82,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "^1.0.0",
     "@vitest/ui": "^1.0.0",
+    "@sentry/vite-plugin": "^2.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
