feat: Add load testing infrastructure with Locust and capacity planning documentation.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,7 @@ sentry-sdk[fastapi]>=2.0.0
 slowapi>=0.1.9
 fastapi-csrf-protect>=0.3.3
 python-json-logger>=2.0.7
+locust>=2.20.0
 
 # Payments
 stripe>=10.0.0
