`Added ModelManager instance and fallback logic to agents and routes`

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,17 +9,20 @@ CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173  # Comma-separated allo
 LOG_LEVEL=INFO                     # DEBUG | INFO | WARNING | ERROR
 
 ## Ollama Configuration
-OLLAMA_HOST=http://localhost:11434
-OLLAMA_MODEL=llama3                # Default model name (e.g., llama3)
-OLLAMA_KEEP_ALIVE=10m              # Keep-alive duration for model pooling
-OLLAMA_TEMPERATURE=0.7
-OLLAMA_STREAM=true
+OLLAMA_HOST=http://localhost:11434  # URL where Ollama is running (default: http://localhost:11434)
+OLLAMA_MODEL=llama3                # Default model to use (default: llama3)
+OLLAMA_KEEP_ALIVE=10m              # Keep-alive duration (default: 10m)
+OLLAMA_TEMPERATURE=0.7             # Generation temperature (default: 0.7)
+OLLAMA_STREAM=true                 # Enable streaming by default
 
 MODEL_CACHE_TTL=3600              # Response cache duration in seconds
 MODEL_HEALTH_CHECK_INTERVAL=300    # Health check frequency in seconds
 MODEL_REQUEST_TIMEOUT=30           # Request timeout in seconds
 MODEL_MAX_RETRIES=3                # Maximum retry attempts for failed requests
 MODEL_WARMUP_ON_STARTUP=true       # Enable model warmup on startup
+
+## HuggingFace Configuration (Optional Fallback)
+HUGGINGFACE_API_KEY=your-huggingface-api-key-here  # Optional API key for HuggingFace models as fallback
 
 ## Supabase Configuration
 # Use the Supabase service role key for backend operations (NEVER expose to frontend).
@@ -89,6 +92,11 @@ SENTRY_ENABLE_TRACING=true                               # Enable performance tr
 
 # Additional notes:
 # - OLLAMA_HOST: If running Ollama locally, the default port is 11434.
+# - Ollama Models: Before running the application, pull the required models using:
+#   ollama pull llama3
+#   ollama pull mistral
+#   ollama pull codellama
+# - HuggingFace API Key: Optional for fallback models when Ollama is unavailable.
 # - SUPABASE_KEY: Prefer using a dedicated service role key scoped to the backend.
 # - SUPABASE_JWT_SECRET: Required for API authentication to work properly.
 # - CORS_ORIGINS: Add production frontend domain(s) when deploying.
