--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,10 @@ services:
       context: .
       dockerfile: backend/Dockerfile
     image: pixelcraft-bloom-backend:dev
+    # Only load root .env for runtime configuration. Do not load example files containing
+    # placeholder secrets (e.g., SENTRY_DSN with 'project-id') which can cause runtime errors.
     env_file:
       - .env
-      - backend/.env.example
     ports:
       - "8000:8000"
     depends_on:
