--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
-version: '3.8'
+# PixelCraft Bloom - Docker Compose Configuration
+# 
+# This file orchestrates all backend services: PostgreSQL, Redis, Backend API, and Ollama.
+# Ensure Docker Desktop has 12GB+ memory allocated.
+#
+# Usage:
+#   docker compose up -d          # Start all services
+#   docker compose logs -f        # Watch logs
+#   docker compose down           # Stop all services
+#   docker compose down -v        # Stop and remove volumes (fresh start)
 
 services:
+  # PostgreSQL database for analytics, subscriptions, and application data
   db:
     image: postgres:15-alpine
     restart: unless-stopped
@@ -13,12 +23,14 @@ services:
     ports:
       - "5432:5432"
 
+  # Redis for caching and real-time features
   redis:
     image: redis:7-alpine
     restart: unless-stopped
     ports:
       - "6379:6379"
 
+  # FastAPI backend for chat, analytics, and API endpoints
   backend:
     build:
       context: .
@@ -29,27 +41,29 @@ services:
     env_file:
       - .env
     ports:
-      - "8000:8000"
+      - "8000:8000"  # Backend API exposed on port 8000
     depends_on:
       - db
       - redis
     volumes:
       - ./backend:/app
 
+  # Ollama LLM inference engine
+  # Note: If an official Ollama Docker image isn't available for your setup,
+  # run Ollama locally on the host (see README) and remove/disable this service.
+  # Host port remapped to 11435 to avoid conflict with a local Ollama instance
   ollama:
     image: ollama/ollama:latest
-    # Note: If an official Ollama Docker image isn't available for your setup,
-    # run Ollama locally on the host (see README) and remove/disable this service.
-    # Host port remapped to 11435 to avoid conflict with a local Ollama instance
     ports:
-      - "11435:11434"
+      - "11435:11434"  # Ollama API on port 11435 (avoids localhost conflict)
     restart: unless-stopped
     deploy:
       resources:
         limits:
-          memory: 12G
+          memory: 12G  # Maximum memory Ollama can use
         reservations:
-          memory: 8G
+          memory: 8G   # Reserved memory guarantee
 
 volumes:
+  # PostgreSQL data volume (persists database across container restarts)
   db_data:
