feat: Enhance demo section with interactive navigation and updated AI-focused content, and improve subscription checkout error handling.

--- a/.env
+++ b/.env
@@ -23,3 +23,6 @@ SUPABASE_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS1kZW1vI
 
 # AI Model Configuration
 HUGGING_FACE_API_KEY="your_huggingface_api_key_here"  # Get from huggingface.co/settings/tokens
+
+# Frontend API Configuration
+VITE_API_BASE_URL="http://localhost:8000"
