--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # PixelCraft Bloom - Docker Compose Configuration
-# 
+#
 # This file orchestrates all backend services: PostgreSQL, Redis, Backend API, and Ollama.
 # Ensure Docker Desktop has 12GB+ memory allocated.
 #
@@ -41,7 +41,7 @@ services:
     env_file:
       - .env
     ports:
-      - "8000:8000"  # Backend API exposed on port 8000
+      - "8000:8000" # Backend API exposed on port 8000
     depends_on:
       - db
       - redis
@@ -55,15 +55,32 @@ services:
   ollama:
     image: ollama/ollama:latest
     ports:
-      - "11435:11434"  # Ollama API on port 11435 (avoids localhost conflict)
+      - "11435:11434" # Ollama API on port 11435 (avoids localhost conflict)
     restart: unless-stopped
+    volumes:
+      - ollama_data:/root/.ollama
     deploy:
       resources:
         limits:
-          memory: 12G  # Maximum memory Ollama can use
+          memory: 32G # Increased for Mixtral
         reservations:
-          memory: 8G   # Reserved memory guarantee
+          memory: 16G # Reserved memory guarantee
+
+  # Frontend React Application
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+      args:
+        - VITE_API_BASE_URL=http://localhost:8000
+    ports:
+      - "3001:5173"
+    depends_on:
+      - backend
+    restart: unless-stopped
 
 volumes:
   # PostgreSQL data volume (persists database across container restarts)
-  db_data:
+  db_data: # Ollama model data volume
+
+  ollama_data:
