--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,3 +76,15 @@ jobs:
           pip install pip-audit
           pip-audit
         continue-on-error: true
+
+  # Combined job to run both frontend and backend tests together
+  full-test-suite:
+    name: Full Test Suite
+    runs-on: ubuntu-latest
+    needs: [frontend, backend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Report success
+        run: echo "All tests passed! ✅"
