--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
       args:
         - VITE_API_BASE_URL=http://localhost:8000
     ports:
-      - "3001:8080"  # Changed from 5173 to 8080 to match actual Vite port
+      - "3001:5173"  # Frontend on port 3001
     depends_on:
       - backend
     restart: unless-stopped
