Configure GitHub Pages with custom domain

--- a/.env.production
+++ b/.env.production
@@ -1,13 +1,9 @@
-# ==========================================
-# AgentsFlowAI Production Environment
-# ==========================================
-
 # ---------------- Frontend ----------------
 # API URL (VPS IP Address)
-VITE_API_BASE_URL=http://72.61.16.111:8000
+VITE_API_BASE_URL=https://api.agentsflowai.cloud
 
 # Backend API base URL for Frontend (duplicate for legacy)
-VITE_API_URL=http://72.61.16.111:8000
+VITE_API_URL=https://api.agentsflowai.cloud
 
 # Supabase Configuration (Frontend)
 VITE_SUPABASE_URL=https://jufpxjbxakvjluezegbz.supabase.co
