--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,8 @@ services:
         - VITE_API_BASE_URL=http://localhost:8000
     ports:
       - "3001:5173" # Frontend on port 3001
+    env_file:
+      - .env
     depends_on:
       - backend
     restart: unless-stopped
