docs: Consolidate and reorganize documentation, add new scripts, and update environment and backend configurations.

--- a/.env
+++ b/.env
@@ -22,7 +22,8 @@ APP_PORT=8000
 CORS_ORIGINS=http://72.61.16.111:5173,http://localhost:5173,https://yourdomain.com
 
 # Database
-DATABASE_URL=postgresql://postgres:Tk,j(#P7BMIuE9qRBPR1@db.ozqpzwwpgyzlxhtekywj.supabase.co:5432/postgres
+# Using Supavisor Connection Pooler (London Region - IPv4 Compatible)
+DATABASE_URL=postgresql://postgres.ozqpzwwpgyzlxhtekywj:Tk%2Cj%28%23P7BMIuE9qRBPR1@aws-0-eu-west-2.pooler.supabase.com:5432/postgres?sslmode=require
 
 # Supabase (Backend)
 # Using double underscores for Pydantic Settings compatibility if needed
@@ -38,7 +39,7 @@ SUPABASE__JWT_SECRET=i6xlNlqMjPlyOKYdGb6dDKdQjySZmoGS36tR/fD9tk6akas4YEeD67GaQsj
 REDIS_URL=redis://redis:6379/0
 
 # Ollama
-OLLAMA_HOST=http://ollama:11434
+OLLAMA_HOST=http://127.0.0.1:11434
 OLLAMA_MODEL=mistral:7b
 
 # External Services
